# myobservatory

./: conftest.py  note.py  pyproject.toml  settings.py
api_testing/: test_nine_days_forecast.py  utils.py
api_testing_2/: test_nine_days_forecast.py  utils.py
features/: weather_forecast.feature
infra/: base.py
my_utils/: page_utils.py
page/: __init__.py  background_location_access_page.py  base_screen.py  device_location_access_page.py  disclaimer_page.py  home_page.py  nine_days_forecast_page.py  privacy_policy_statements_page.py  traffic_info_tutorial_page.py  whats_new_page.py
steps/: __init__.py  nine_days_forecast.py
test/: test_weather_forecast.py
test/.pytest_cache/: .gitignore  README.md
test/.pytest_cache/v/cache/: lastfailed  nodeids
yml/: config.yml
